--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NekoExpress</string>
     <string name="thumbnail_description">Image Thumbnail</string>
+    <string name="icon_description">Image Icon</string>
+    <string name="format_product_price">S/ %.2f</string>
 </resources>
