--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,19 @@
     <string name="thumbnail_description">Image Thumbnail</string>
     <string name="icon_description">Image Icon</string>
     <string name="format_product_price">S/ %.2f</string>
+
+    <string name="text_description_title">Description</string>
+    <string name="text_size_title">Size</string>
+    <string name="text_color_title">Color</string>
+
+    <string name="text_size_small_value">S</string>
+    <string name="text_size_medium_value">M</string>
+    <string name="text_size_large_value">L</string>
+    <string name="text_size_extra_large_value">XL</string>
+
+    <string name="text_description_default">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn t anything embarrassing hidden in the middle of text.</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
