--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,13 @@
     <string name="text_description_title">Description</string>
     <string name="text_size_title">Size</string>
     <string name="text_color_title">Color</string>
+    <string name="text_subtotal_title">Subtotal</string>
+    <string name="text_taxes_title">Taxes</string>
+    <string name="text_total_title">Total</string>
 
     <string name="button_add_cart_description">Add To Cart</string>
+    <string name="button_checkout_cart_description">Checkout</string>
+    <string name="button_pay_order_description">Pay Order</string>
 
     <string name="text_size_small_value">S</string>
     <string name="text_size_medium_value">M</string>
