--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="format_product_price">S/ %.2f</string>
     <string name="format_product_score">%.1f</string>
-    <string name="format_product_review">%d reviews</string>
+    <string name="format_product_review">(%d reviews)</string>
 
     <string name="text_description_title">Description</string>
     <string name="text_size_title">Size</string>
