--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,11 @@
     <string name="button_pay_order_description">Pay Order</string>
     <string name="button_confirm_order_description">Confirm Order</string>
 
+    <string name="dialog_delete_item_title">Delete</string>
+    <string name="dialog_delete_item_message">Are you sure you want to delete this item?</string>
+    <string name="dialog_delete_item_positive_button">OK</string>
+    <string name="dialog_delete_item_negative_button">Cancel           </string>
+
     <string name="dialog_confirm_order_success_title">Order Successful</string>
     <string name="dialog_confirm_order_success_message">Thanks for use our services. Your order is on the way.</string>
     <string name="dialog_confirm_order_success_positive_button">OK</string>
