--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
     <string name="format_item_invoice_number">Order No: %09d</string>
     <string name="format_item_invoice_total">Total: $ %.2f</string>
     <string name="format_item_invoice_purchase_date">Date: %s</string>
+    <string name="format_item_invoice_detail_size">Size: %s</string>
+    <string name="format_item_invoice_detail_color">Color: %s</string>
+    <string name="format_item_invoice_detail_quantity">Qty: %d</string>
+    <string name="format_item_invoice_detail_price">$ %.2f</string>
+
 
     <string name="text_description_title">Description</string>
     <string name="text_size_title">Size</string>
